<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.soft.weather.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="clip_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="City Name"
                    android:textAlignment="textStart"
                    android:textSize="36sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_description" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/myLightGrey"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/tv_weather"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/condition_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    custom:srcCompat="@drawable/default_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/tv_temperature"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/main_temp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/main_temp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/myColour"
                    android:textSize="70sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_humidity"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:id="@+id/donut_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    custom:donut_progress="20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_sunrSuns"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            custom:srcCompat="@drawable/sun" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            custom:srcCompat="@drawable/line" />

                        <TextView
                            android:id="@+id/sunrise_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/sunrise"
                            android:textAlignment="center"
                            android:textColor="@color/myColour" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sunset_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/sunset"
                            android:textAlignment="center"
                            android:textColor="@color/myColour" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            custom:srcCompat="@drawable/line" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            custom:srcCompat="@drawable/sunset" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/myLightGrey"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_maxMin"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.github.lzyzsd.circleprogress.CircleProgress
                            android:id="@+id/circle_prog_min"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            custom:circle_progress="30"
                            custom:circle_suffix_text="º" />

                        <TextView
                            android:id="@+id/min_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/min_temp"
                            android:textAlignment="center"
                            android:textColor="@color/myColour"
                            android:layout_marginTop="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/myLightGrey"></LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.github.lzyzsd.circleprogress.CircleProgress
                            android:id="@+id/circle_prog_max"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            custom:circle_progress="30"
                            custom:circle_suffix_text="º" />

                        <TextView
                            android:id="@+id/max_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/max_temp"
                            android:textAlignment="center"
                            android:textColor="@color/myColour"
                            android:layout_marginTop="10dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_windSpeed"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <ImageView
                    custom:srcCompat="@drawable/wind_dir"
                    android:id="@+id/wind_dir"
                    android:layout_gravity="center"
                    android:rotation="0"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/wind_direction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_dir"
                    android:textAlignment="center"
                    android:textColor="@color/myColour" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    android:textColor="@color/myColour" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
